--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 
 @import './layout/header';
 @import './layout/grid';
+@import './layout/footer';
+@import './layout/navigation';
 
 @import './components/button';
 @import './components/composition';
@@ -13,5 +15,7 @@
 @import './components/card';
 @import './components/story';
 @import './components/bg-video';
+@import './components/form';
+@import './components/popup';
 
 @import './pages/home';
