--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,50 @@
   left: 50%;
   transform: translate(-50%,-50%);
 }
+
+
+//MEDIA QUERY MANAGER 
+
+/*
+0-600px PHONE
+600-900PX Tablet Portrait
+900-1200PX tablet landscape
+1200-1800PX Desktop
+1800px + Big Desktop
+*/
+
+
+// @mixin respond-phone{
+//   @media(max-width: 600px){
+//     @content;
+//   }
+// }
+
+/*
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+
+//ORDER : BASE + TYPOGRAPHY + LAYOUT + GRID > PAGE LAYOUT > COMPONENTS
+
+
+@mixin respond($breakpoint){
+
+  @if $breakpoint == phone {
+    //600/16=37.5
+    @media (max-width: 37.5em){@content}; //600PX
+  }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em){@content}; //900PX
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em){@content}; //1200PX
+  }
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5rem){@content};//1800PX
+  }
+
+}
