--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -18,6 +18,8 @@ $color-grey-dark-3:#333;
 //GRID
 $grid-width:114rem;
 $gutter-vertical:8rem;
+$gutter-vertical-small:8rem;
+
 $gutter-horizontal:6rem;
 
 //FONT
