--- a/sass/base/_typograpgy.scss
+++ b/sass/base/_typograpgy.scss
@@ -4,6 +4,8 @@
   backface-visibility: hidden;
   margin-bottom: 6rem;
 
+
+
   &--main{
     display: block;
     font-size: 6rem;
@@ -12,6 +14,11 @@
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
+
+    @include respond(phone){
+      letter-spacing: 1rem;
+      font-family: 5rem;
+    }
   }
   
   &--sub{
@@ -20,6 +27,9 @@
     font-weight: 700;
     letter-spacing: 1.74rem;
     animation: moveInRight 1s ease-out;
+    @include respond(phone){
+      letter-spacing: .5rem;
+    }
   }
 }
 
@@ -33,6 +43,14 @@
   color: transparent;
   letter-spacing: .2rem;
   transition: all .2s;
+
+  @include respond(tab-port){
+    font-size: 3rem;
+  }
+
+  @include respond(phone){
+    font-size: 2.5rem;
+  }
 
   &:hover{
     transform: skewY(2deg) skewX(15deg) scale(1.1);
