--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,28 +10,7 @@ Dark green: #28b485
 
 
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-  
-}
 
-html{
-  font-size: 62.5%;
-}
-body{
-  font-family: "Lato",sans-serif;
-  font-weight: 400;
-  /* font-size: 16px; */
-  line-height: 1.7;
-  color: $color-grey-dark;
-  padding: 3rem;
-  box-sizing: border-box;
-
-}
 
 
 
@@ -43,6 +22,10 @@ body{
   background-position: top;
   position: relative;
   clip-path: polygon(0 0 , 100% 0, 100% 75vh,0 100%);
+
+  @include respond(phone){
+    clip-path: polygon(0 0 , 100% 0, 100% 85vh,0 100%);
+  }
 
   &__logo-box{
     position: absolute;
