--- a/css/main.css
+++ b/css/main.css
@@ -920,7 +920,7 @@ Dark green: #28b485
   font-size: 6rem;
   font-weight: 100;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em), only screen and (hover: none) {
   .card {
     height: auto;
     border-radius: 3px;
